# Followup

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  Makefile  PATIENT_GROUP_SCRIPTS.md  README.md  process_CAG_patients.py  process_PCI_patients.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.example.yaml  config.yaml
data/raw/: extracted_PSM186_PCI_cases_20251104_222503_随访表1_20251106_121852.xlsx  extracted_PSM93_cases_20251104_221914_随访表1_20251106_121718.xlsx  随访编码.xlsx
docs/: AUTO_EXTRACTION.md  DEVELOPMENT.md  PROJECT_REFACTORING.md  QUICKSTART.md  VERIFICATION.md
examples/: README.md  __init__.py  example_basic_usage.py  example_complete_workflow.py  example_create_sample_data.py  example_endpoint_comparison.py  process_longitudinal_followup.py  run_longitudinal_processing.py
scripts/: extract_and_process.py  extract_followup_sheets.py  followup_data_processor.py  process_CAG_patients.py  process_PCI_patients.py
src/: __init__.py  config.py  data_exporter.py  data_importer.py  data_models.py  event_processor.py  logger.py  longitudinal_importer.py  longitudinal_models.py  longitudinal_processor.py  main.py  py.typed
tests/: __init__.py  conftest.py  simple_test.py  test_config.py  test_data_exporter.py  test_data_importer.py  test_data_models.py  test_event_processor.py  test_longitudinal.py
